<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="pos"
            type="androidx.databinding.ObservableInt" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_all_type"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:drawableRight="@{pos==0?@drawable/ic_select:null}"
            android:gravity="center_vertical"
            android:text="@string/course_all_type"
            android:textColor="@{pos==0?@color/teal_700:@color/colorSecondaryText}"
            android:textSize="14sp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_line_height"
            android:background="@color/colorDivider"
            app:layout_constraintTop_toBottomOf="@+id/tv_all_type" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_biz_type"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:drawableRight="@{pos==1?@drawable/ic_select:null}"
            android:gravity="center_vertical"
            android:text="@string/course_commercial_combat"
            android:textColor="@{pos==1?@color/teal_700:@color/colorSecondaryText}"
            android:textSize="14sp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_all_type" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_line_height"
            android:background="@color/colorDivider"
            app:layout_constraintTop_toBottomOf="@+id/tv_biz_type" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_special_type"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:drawableRight="@{pos==2?@drawable/ic_select:null}"
            android:gravity="center_vertical"
            android:paddingEnd="10dp"
            android:text="@string/course_special_good_class"
            android:textColor="@{pos==2?@color/teal_700:@color/colorSecondaryText}"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_biz_type" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_line_height"
            android:background="@color/colorDivider"
            app:layout_constraintTop_toBottomOf="@+id/tv_special_type" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>